--- a/base files/assets/css/custom.css
+++ b/base files/assets/css/custom.css
@@ -1,54 +1,56 @@
-.logoSizer{
- width: 90%;
+/** @format */
+
+.logoSizer {
+  width: 90%;
 }
-.logoSizer1{
- width: 30%;
+.errorPageLogo {
+  width: 30%;
 }
-.logoMoblie{
- width: 45%;
-}
- 
-.navBlue{
-    background-color: #04009A;
-    color: #ffff;
+.logoMoblie {
+  width: 45%;
 }
 
-.textWhite{
-    color: #ffff;
+.navBlue {
+  background-color: #04009a;
+  color: #ffff;
 }
 
-.textBlue{
-    color: #0002A1;
+.textWhite {
+  color: #ffff;
 }
 
-.btnColor{
-    color: #ffff;
-}
-.btnColor:hover{
-    color: #E14D2A;
+.textBlue {
+  color: #0002a1;
 }
 
-.categories-images{
-    width: 100%;
+.btnColor {
+  color: #ffff;
+}
+.btnColor:hover {
+  color: #e14d2a;
 }
 
-.locationBTN{
-    --fc-btn-color: #ffffff;
-    --fc-btn-border-color: #ffffff;
-    --fc-btn-hover-color: #000;
-    --fc-btn-hover-bg: #ffffff;
-    --fc-btn-hover-border-color: #ffffff;
-    --fc-btn-focus-shadow-rgb: 193, 199, 198;
-    --fc-btn-active-color: #000;
-    --fc-btn-active-bg: #ffffff;
-    --fc-btn-active-border-color: #ffffff;
-    --fc-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --fc-btn-disabled-color: #ffffff;
-    --fc-btn-disabled-bg: transparent;
-    --fc-btn-disabled-border-color: #ffffff;
-    --fc-gradient: none;
+.categories-images {
+  width: 100%;
 }
 
-.moblieSearch{
-    display: hidden;
+.locationBTN {
+  --fc-btn-color: #ffffff;
+  --fc-btn-border-color: #ffffff;
+  --fc-btn-hover-color: #000;
+  --fc-btn-hover-bg: #ffffff;
+  --fc-btn-hover-border-color: #ffffff;
+  --fc-btn-focus-shadow-rgb: 193, 199, 198;
+  --fc-btn-active-color: #000;
+  --fc-btn-active-bg: #ffffff;
+  --fc-btn-active-border-color: #ffffff;
+  --fc-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --fc-btn-disabled-color: #ffffff;
+  --fc-btn-disabled-bg: transparent;
+  --fc-btn-disabled-border-color: #ffffff;
+  --fc-gradient: none;
+}
+
+.moblieSearch {
+  display: hidden;
 }
